# Multiplatform-Customer-Support-Next-Best-Action-Engine

./: LICENSE  README.md  conversation_threader.py  data_explore.ipynb  data_normalizer.py  data_validator.py  database_manager.py  main.py  main_pipeline.py  pyproject.toml  scheduler.py  setup.py
config/: config.py
riverline_backend/: README.md  evaluation.py  main.py  nba_predictions.csv  pipeline_runner.py
riverline_backend/api/: nba_api.py
riverline_backend/helpers/: general_utils.py
riverline_backend/nba/: conversation_processor.py  nba_engine.py  nba_rules.py
riverline_backend/pipeline/: config.py  data_engine_factory.py  data_loader.py  data_processor.py  main.py  schemas.py  storage.py
riverline_backend/pipeline/connectors/: clickhouse_connector.py  db_connector.py  supabase_connector.py
riverline_backend/pipeline/engines/: base_engine.py  pandas_engine.py  spark_engine.py
riverline_backend/pipeline/processors/: data_processor.py
